--- a/public/package.json
+++ b/public/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "flag-icon-css": "2.9.0",
@@ -39,9 +40,11 @@
     "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-alpha.4",
+    "redux": "^3.7.2",
     "simple-line-icons": "2.4.1"
   },
   "scripts": {
