--- a/public/package.json
+++ b/public/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.17.1",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
+    "eslint": "^4.16.0",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
@@ -45,6 +46,7 @@
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "simple-line-icons": "2.4.1"
   },
   "scripts": {
