--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-jsonschema": "^1.1.6",
     "jade": "~1.11.0",
+    "joi": "^13.1.2",
     "mongoose": "^5.0.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2"
