--- a/public/package.json
+++ b/public/package.json
@@ -38,6 +38,7 @@
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
     "history": "4.7.2",
+    "promise": "^8.0.1",
     "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
@@ -46,6 +47,7 @@
     "react-transition-group": "2.2.1",
     "reactstrap": "5.0.0-alpha.4",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "simple-line-icons": "2.4.1"
   },
