--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "babel-watch app.js"
   },
   "dependencies": {
+    "babel-watch": "^2.0.7",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
@@ -13,8 +15,10 @@
     "express-jsonschema": "^1.1.6",
     "jade": "~1.11.0",
     "joi": "^13.1.2",
+    "lodash-id": "^0.14.0",
     "mongoose": "^5.0.3",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "shortid": "^2.2.8"
   }
 }
