--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "joi": "^13.1.2",
     "lodash-id": "^0.14.0",
+    "lowdb": "^1.0.0",
     "mongoose": "^5.0.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
