--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.0.3",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
+    "short-id": "0.1.0-1",
     "shortid": "^2.2.8"
   }
 }
