--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,28 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "babel-watch app.js"
+    "dev": "babel-watch ./bin/www"
   },
   "dependencies": {
+    "apollo-server-express": "^2.0.0-rc.5",
+    "babel-core": "^6.26.3",
     "babel-watch": "^2.0.7",
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
-    "express": "~4.14.1",
+    "exceljs": "^1.5.1",
+    "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
+    "gql": "^1.1.2",
+    "graphql": "^0.13.2",
     "jade": "~1.11.0",
     "joi": "^13.1.2",
+    "lodash": "^4.17.10",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "mongoose": "^5.0.3",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
+    "morgan": "^1.9.0",
+    "serve-favicon": "^2.5.0",
     "short-id": "0.1.0-1",
     "shortid": "^2.2.8"
   }
