--- a/public/package.json
+++ b/public/package.json
@@ -20,7 +20,6 @@
     "file-loader": "1.1.6",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "2.30.1",
-    "node-sass": "4.7.2",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "source-list-map": "2.0.0",
@@ -31,15 +30,21 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.10",
     "axios": "^0.17.1",
     "bootstrap": "4.0.0",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.7.2",
     "eslint": "^4.16.0",
     "flag-icon-css": "2.9.0",
     "font-awesome": "4.7.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "history": "4.7.2",
+    "node-sass": "^4.9.0",
     "promise": "^8.0.1",
+    "randomstring": "^1.1.5",
     "react": "16.2.0",
+    "react-apollo": "^2.1.8",
     "react-chartjs-2": "2.7.0",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.6",
